Fixed menu hover in Chromium 58 making the text unreadable

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-68/_menu.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-68/_menu.scss
@@ -2,6 +2,7 @@ menupopup {
 	button {
 		&:not([disabled="true"]) {
 			&:hover {
+				color: var(--gk-menuitem-foreground) !important;
 				fill: #969696 !important;
 			}
 		}
